Fix 2+ keys (@key @key) problem, and more

--- a/MultiLanguage/languages/RU/dictionaries/Characters.json
+++ b/MultiLanguage/languages/RU/dictionaries/Characters.json
@@ -23,6 +23,7 @@
      "Lewis": "Льюис" ,
      "Linus": "Линус" ,
      "Marnie": "Марни" ,
+     "Marlon": "Марлон" ,
      "Maru": "Мару" ,
      "Mister Qi": "Мистер Ци" ,
      "Mister Qwee": "Мистер Кви" ,
