--- a/MultiLanguage/languages/RU/dictionaries/Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/Events.json
@@ -80,7 +80,7 @@
   "Sorry, Great-Grandma. I lost your precious bracelet. Please forgive me.": "Прости, прабабушка. Я потерял твой драгоценный браслет. Пожалуйста прости меня.",
   "Could she have dropped it nearby?": "Возможно она уронила его рядом?",
   "Is that...?": "Это, что...?",
-  "You found it!": "Ты нашел его!^\"Ты нашла его!\"",
+  "You found it!": "Ты нашел его!^Ты нашла его!",
   "Thank you so much, @player. You're a lifesaver.": "Спасибо тебе, @player. Ты спас мне жизнь.",
   "I won't forget what you did for me here.": "Я никогда не забуду того, что ты сделал для меня.^Я никогда не забуду того, что ты сделала для меня.",
   "I really owe you one, @player.": "Я в долгу перед тобой, @player.",
@@ -163,7 +163,8 @@
   "It's best to be honest with kids.": "Лучше всего быть честным с детьми.",
   "You did the right thing. Kids should have hope.": "Ты поступил правильно. У детей должна быть надежда.",
   "You think so?": "Ты думаешь?",
-  "Maybe you're right... The world is a cruel place, but kids have to learn that one way or another.~Yeah... kids should play and have fun while they still have the chance.": "Может быть и правда... Мир жестокое место, но детям придется узнать об этом так или иначе.~Да... дети должны играть и веселиться пока у них ещё есть возможность.",
+  "Maybe you're right... The world is a cruel place, but kids have to learn that one way or another.": "Может быть и правда... Мир жестокое место, но детям придется узнать об этом так или иначе.",
+  "Yeah... kids should play and have fun while they still have the chance.": "Да... дети должны играть и веселиться пока у них ещё есть возможность.",
   "Hey did I tell you the band's starting to come together?": "Эй, я говорил тебе что группа начинает собираться вместе?",
   "Yeah! It turns out Abigail's a pretty good drummer. And Sebastian seemed to really want her in the band...": "Да! Выяснилось что Эбигейл достаточно хороший барабанщик. И похоже Себастьян очень хочет видеть её в группе...",
   "Ahoy there, son.": "Ахой, сынок.",
@@ -747,12 +748,12 @@
   "You don't have to say anything right now. Let's just stay here for a while...": "Не нужно ничего говорить прямо сейчас. Давай просто останемся здесь еще чуть-чуть...",
   "I didn't know I felt this way about other girls... until I met you.": "Я не знала что могу чувствовать что-то такое по отношению к другим девочкам... пока не встретила тебя.",
   "Hmmm...": "Хмммм...",
-  "...I was just peering down into this old mine shaft.": "...Я просто заглядывал в эту древнюю пещеру.",
+  "...I was just peering down into this old mine shaft.": "...Я как раз заглядывал в эту древнюю пещеру.",
   "It's been abandoned for decades.": "Она была заброшена десятилетиями.",
   "Still, there's probably good ore down there.": "Наверное, там внизу можно до сих пор найти хорошую руду.",
   "But a dark place, undisturbed for so long... I'm afraid ore isn't the only thing you'll find...": "Но... тёмное место в котором так долго никто не бывал... Боюсь что ты найдешь там не только руду...",
   "Here, take this. You might need it.": "Вот, возьми это. Тебе это может понадобится.",
-  "Name's Marlon, by the way. I run the adventurer's guild right outside.": "Меня зовут Марлон, кстати. Я управляю гильдией приключенцев она прямо у входа.",
+  "Name's Marlon, by the way. I run the adventurer's guild right outside.": "Меня зовут Марлон, кстати. Я управляю гильдией приключенцев она справа от входа в шахты.",
   "I'll keep my eye on you. Prove yourself and I might think about making you a member.": "Я буду следить за твоими успехами. Покажи чего ты стоишь и возможно я сделаю тебя членом гильдии.",
   "__comment": "Mountain",
   "__comment": "Abigail",
@@ -1270,7 +1271,7 @@
   "Dreadlord Xarth is muttering an incantation...": "Владыка ужаса Ксарт произносит заклинание...",
   "What do you do?": "Что ты сделаешь?",
   "Cast 'Pure Beam' at Xarth.": "Сколдовать 'Чистый Луч' в Ксарта.",
-  "Put a 'Shield Charm' on your friends.": "Наложить 'Щит очарования на друзей.'",
+  "Put a 'Shield Charm' on your friends.": "Наложить 'Щит очарования' на друзей.",
   "You place a 'Shield Charm' on Sam and Sebastian.": "Ты наложил 'Щит Очарования' на Сэма и Себастьяна.^Ты наложила 'Щит Очарования' на Сэма и Себастьяна.",
   "Xarth sends bolts of pure dark energy flying. One of them strikes Sebastian, but your 'Shield Charm' reflects it back into Xarth's face!": "Ксарт направил сгустки тёмной энергии в вашем направлении. Один из них достиг Себастьяна, но твой 'Щит Очарования' отразил его обратно в лицо Ксарта!",
   "Xarth is defeated, and the Solarion Staff glows peacefully. Order has been restored to the world.": "Ксарт повержен, а Посох Солариона освещает вас мирным светом. После этого во всём мире восстановился порядок!",
@@ -1516,7 +1517,7 @@
   "Thanks for the help. ": "Спасибо за помощь. ",
   "...Clint?": "...Клинт?",
   "What a productive day... I got some great footage.": "Какой продуктивный день... у меня есть отличные кадры.",
-  "That's a good boy, Dusty.": "Этот мальчик хороший, Дасти.",
+  "That's a good boy, Dusty.": "Молодец, Дасти.",
   "You might be the only one around here who understands me.": "Ты, может быть единственная, кто меня понимает.",
   "No one else has seen the kind of stuff you and I have.": "Больше такого не видел никто, только ты и я.",
   "@player! Did you overhear me talking?": "@player! Ты подслушал мой разговор?",
@@ -1572,9 +1573,15 @@
   "You're right, sir. Sam should respect private property.": "Вы правы, сэр. Сэм должен уважать частную собственность.",
   "Don't blame Sam. There's nowhere else for him to ride!": "Не вини Сэма. Ему больше негде кататься!",
   "I'm staying out of this.": "Это не моё дело.",
-  "Fine! I just won't ride my skateboard ever again. Happy?~Exactly! If there was a park in town, I could ride there and everyone would be happy.~Hmmph. Alright.": "Отлично! Я просто больше не притронусь к скейтбору. Счастливы?~Именно! Если бы в городе был парк, я бы мог кататься в нём и все были бы счастливы. ~Хммм. Ладно.",
-  "You're being difficult, Sam. I have no problem with you riding around town, just try not to cause any damage! It's that simple.~Hmmph. I thought you were more mature than this, @player.~I'll let it slide this time, Sam. But I don't want to see you doing this anymore.": "С тобой сложно, Сэм. Я не против, что ты разъезжаешь по городу, но постарайся хотя бы ни чего не ломать! Это же так просто.~ Хммм. Я думал, что ты перерос это, @player.~ Я позволю тебе уйти с этим в этот раз, Сэм. Но, что бы Я этого больше не видел.",
-  "Got it?~Sam... I'm sorry I yelled at you. Just please try not to damage anything in the future. Got it?~Got it?": "Понял?~Сэм... мне жаль что сорвался на тебя. Просто постарайся в будущем, больше ни чего не ломать, хорошо?~Понял?",
+  "Fine! I just won't ride my skateboard ever again. Happy?": "Отлично! Я просто больше не притронусь к скейтбору. Счастливы?",
+  "Exactly! If there was a park in town, I could ride there and everyone would be happy.": "Именно! Если бы в городе был парк, я бы мог кататься в нём и все были бы счастливы.",
+  "Hmmph. Alright.": "Хммм. Ладно.",
+  "You're being difficult, Sam. I have no problem with you riding around town, just try not to cause any damage! It's that simple.": "С тобой сложно, Сэм. Я не против, что ты разъезжаешь по городу, но постарайся хотя бы ни чего не ломать! Это же так просто.",
+  "Hmmph. I thought you were more mature than this, @player.": "Хммм. Я думал, что ты перерос это, @player.",
+  "I'll let it slide this time, Sam. But I don't want to see you doing this anymore.": "Я позволю тебе уйти с этим в этот раз, Сэм. Но, что бы Я этого больше не видел.",
+  "Got it?": "Понял?",
+  "Sam... I'm sorry I yelled at you. Just please try not to damage anything in the future. Got it?": "Сэм... мне жаль что сорвался на тебя. Просто постарайся в будущем, больше ни чего не ломать, хорошо?",
+  "Got it?": "Понял?",
   "Yes, sir.": "Да, сэр.",
   "...Did you see that trick, though? That was rad.": "...Ты видел этот трюк? Это было круто.",
   "@player! You're here!": "@player! Ты здесь!",
@@ -1661,14 +1668,14 @@
   "...": "...",
   "Oh, hi there.": "Ой, привет.",
   "What an eyesore...": "Какая мерзость...",
-  "This is the Pelican Town Community Center... or what's left of it, anyway.": "Это Общественный Центр Пеликан Таун... по крайней мере, то что от него осталось.",
+  "This is the Pelican Town Community Center... or what's left of it, anyway.": "Это Общественный центр Пеликан-Тауна... по крайней мере то, что от него осталось.",
   "It used to be the pride and joy of the town... always bustling with activity.": "Раньше он был гордостью и радостью города... в нём всегда было людно.",
-  "Now... just look at it. It's shameful.": "А теперь... взгляни на это. Позорище.",
+  "Now... just look at it. It's shameful.": "А теперь... взгляни на это. Стыд и позор.",
   "These days, the young folk would rather sit in front of the TV than engage with the community.": "Нынче молодёжь лучше будет сидеть перед телевизором, чем общаться с людьми.",
   "But listen to me, I sound like an old fool.": "Посмотрите на меня, брюзжу как старый дурак",
-  "Joja Corporation has been hounding me to sell them the land so they can turn it into a warehouse...": "Корпорация ДжоДжа запугивали меня что бы я подал им участок земли под постройку склада...",
+  "Joja Corporation has been hounding me to sell them the land so they can turn it into a warehouse...": "Корпорация ДжоДжа запугивали меня что бы я продал им участок земли под постройку склада...",
   "Pelican Town could use the money, but there's something stopping me from selling it... I guess old timers like me get attached to relics of the past... Ah well.": "Пеликан Тауну пригодились бы эти деньги, но что то останавливает меня от этого... полагаю старики вроде меня слишком привязаны к прошлому... ну ладно.",
-  "If anyone else buys a Joja Co. Membership I'm just gonna go ahead and sell it.": "Если кто нибудь купит членство в ДжоДжа Ко, я пойду им навстречу и продам им землю.",
+  "If anyone else buys a Joja Co. Membership I'm just gonna go ahead and sell it.": "Если кто-нибудь купит членство в ДжоДжа Ко, я пойду им навстречу и продам им землю.",
   "*sigh*... Here, let's go inside...": "*вздох*... Пошли, зайдём внутрь...",
   "Hmm? What's this?...": "Хмм? Что это?...",
   "I guess Vincent and Jas must've been playing in here.": "Должно быть Винсент и Джес здесь игрались.",
