--- a/MultiLanguage/languages/RU/dictionaries/Festivals.json
+++ b/MultiLanguage/languages/RU/dictionaries/Festivals.json
@@ -324,7 +324,7 @@
   "These blasted sand-flies keep landing on the food!": "Мерзкие мошки так и норовят упасть в тарелку!",
   "You say it's raining up above? *gasp*": "Говоришь, наверху идёт дождь? *вздыхает*",
   "Rain... It's almost mythical to us. Some of us live our entire lives without ever experiencing it.": "Дождь... Для моего народа он почти легенда. Некоторые из нас старятся и умирают так и не узнав, что это такое.",
-  "The merpeople are curious about your festivities.": "Морским обитателям интересны ваши празднецтва.",
+  "The merpeople are curious about your festivities.": "Морским обитателям интересны ваши празднества.",
   "They become upset when you litter into the ocean.": "Но они очень расстраиваются, когда вы захламляете океан.",
   "Good thing I came with sunscreen.": "Хорошо, что я захватил крем от загара.",
   "I wonder if Maru could use some sunscreen on her shoulders?": "Может предложить Мару намазать плечи?",
