--- a/MultiLanguage/languages/RU/dictionaries/Items.json
+++ b/MultiLanguage/languages/RU/dictionaries/Items.json
@@ -165,12 +165,12 @@
     "It's really slimy.": "Ну очень скользкие.",
     "Sea Cucumber": "Морской огурец",
     "A slippery, slimy creature found on the ocean floor.": "Скользкий, слизистый обитатель дна океана.",
-    "Super Cucumber": "Морской Супер Огурец",
+    "Super Cucumber": "Превосходный Морской Огурец",
     "A rare, purple variety of sea cucumber.": "Редкая фиолетовая разновидность морского огурца.",
     "Ghostfish": "Рыба-Призрак",
     "A pale, blind fish found in underground lakes.": "Бледная и слепая рыба, живущая в подземном озере.",
     "White Algae": "Белые Водоросли",
-    "It's super slimy.": "IСупер скользкие.",
+    "It's super slimy.": "Супер скользкие.",
     "Stonefish": "Рыба-камень",
     "A bizarre fish that's shaped like a brick.": "Странная рыба формами похожая на кирпич.",
     "Crimsonfish": "Алая Рыба",
@@ -860,7 +860,7 @@
     "Blue Jazz": "Мордовник",
     "The flower grows in a sphere to invite as many butterflies as possible.": "Цветёт плотным шариком, чтобы привлечь побольше пчёл и бабочек.",
     "Sprinkler": "Ороситель",
-    "Waters the 4 adjacent tiles every morning.": "",
+    "Waters the 4 adjacent tiles every morning.": "Каждое утро поливает 4 прилегающих клетки.",
     "Plum Pudding": "Сливовый пудинг",
     "A traditional holiday treat.": "Традиционное праздничное лакомство.",
     "Artichoke Dip": "Соус из артишоков",
@@ -1215,7 +1215,7 @@
     "Seaweed": "Морская капуста",
     "Green Algae": "Зеленые Водоросли",
     "Sea Cucumber": "Морской Огурец",
-    "Super Cucumber": "Морской Супер Огурец",
+    "Super Cucumber": "Превосходный Морской Огурец",
     "Ghostfish": "Рыба-Призрак",
     "White Algae": "Белые Водоросли",
     "Stonefish": "Рыба-камень",
@@ -1877,7 +1877,7 @@
     "'Vanilla Villa'": "\"Ванилла Вила\"",
     "'Primal Motion'": "\"Необузданное Движение\"",
     "'Jade Hills'": "\"Нефритовые холмы\"",
-    "'Sun #44'": "\"Солнце №44\"",
+    "'Sun #44'": "'Солнце №44'",
     "Wallflower Pal": "Неприкаянный приятель",
     "'Spires'": "\"Шпили\"",
     "'Highway 89'": "\"Шоссе 89\"",
@@ -1944,9 +1944,9 @@
     "A city-slicker's standard.": "Выбор городского пижона.",
     "Cool Cap": "Бейсболка",
     "It looks really faded, but it used to be a vibrant blue. (Achievement: 250k)": "Выглядит блекло, но раньше она была ярко-синей.(Достижение: 250тыс.)",
-    "Lucky Bow": "Счастливый Бант",
+    "Lucky Bow": "Ирландская бабочка",
     "The middle is made of solid gold. (Achievement: 50k)": "Середина сделана из чистого золота.(Достижение: 50тыс.)",
-    "Polka Bow": "Бант в крапинку",
+    "Polka Bow": "Бабочка в горошек",
     "This one's sure to be turn heads. (Achievement: Gofer)": "Это обязательно вскружит голову. (Достижение: Поди-подай)",
     "Gnome's Cap": "Шапка гнома",
     "This gnome had a very large head. (Achievement: Craft Master)": "У этого гнома была очень большая голова.(Достижение: Мастер Крафта)",
@@ -1968,9 +1968,9 @@
     "Made from synthetic fibers. (Achievement: Best Friends)": "Сделаны из синтетических волокон. (Достижение: Лучший друг)",
     "Cat Ears": "Кошачьи ушки",
     "Whiskers included. (Achievement: The Beloved Farmer)": "Усы в комплекте. (Достижение: Обожаемый фермер)",
-    "Cowgal Hat": "Ковбойская шляпа",
+    "Cowgal Hat": "Ковбойская шляпка",
     "The band is studded with fake diamonds. (Achievement: Monoculture)": "Ремешок усыпан фальшивыми бриллиантами. (Достижение: Монокультура)",
-    "Cowpoke Hat": "Ковбойская шляпа",
+    "Cowpoke Hat": "Шляпа ковбоя",
     "For dairy experts. (Achievement: Polyculture)": "Для молочных экспертов.(Достижение: Поликультура)",
     "Archer's Cap": "Шапка лучника",
     "Fashionable whether you're an archer or not. (Achievement: Gourmet Chef)": "Модно, лучник ты или нет. (Достижение: Шеф-гурман)"
