--- a/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
+++ b/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
@@ -91,7 +91,7 @@
   "Thanks, kid.": "Спасибо, малыш.",
   "__comment": "Emily",
   "This gift is fabulous! Thank you so much!": "Этот подарок просто сказочный! Огромное спасибо!",
-  "Thank you! I'm feeling a positive energy from this gift.": "Спасибо! Мне очень понравился подарок.",
+  "Thank you! I'm feeling a positive energy from this gift.": "Спасибо! Я чувствую позитивную энергию от этого подарка",
   "Sorry, @player. I don't like this.": "Прости, @player. Мне не нравится.",
   "This gift has a strong negative energy. I can't stand it.": "Этот подарок имеет сильную отрицательную энергию. Я этого не перенесу.",
   "Thanks!": "Спасибо!",
@@ -99,7 +99,7 @@
   "Oh my god, this is my favorite thing!!": "Бог ты мой, это же моя любимая вещь!!",
   "*gasp*...for me? Thank you!": "*восторженно*...это мне? Благодарю!",
   "Ugh...that's such a stupid gift.": "Фу...это бестолковый подарок.",
-  "Gross!": "Ужасно!",
+  "Gross!": "Гадость!",
   "Thank you. I love presents.": "Спасибо. Я люблю подарки.",
   "__comment": "Jas",
   "*gasp*...Wow!! Thank you!": "*восторженно* ...Вау! Спасибо!",
@@ -109,7 +109,7 @@
   "Thank you!": "Спасибо тебе!",
   "__comment": "Vincent",
   "Wow, thank you so much! This is terrific!": "Вау, огромное спасибо! Это потрясающе!",
-  "For me? Wow, thanks!": "Для меня? Ух ты, спасибо!",
+  "For me? Wow, thanks!": "Это для меня? Ух ты, спасибо!",
   "This isn't very fun...": "Это не очень смешно...",
   "Yuck, what is this?": "Фу, что это?",
   "Thanks!": "Спасибо!",
