--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -86,13 +86,13 @@
   "Bring Jodi a cauliflower.": "Принести Джоди цветную капусту.",
   "Oh, that looks so delicious! Thank you, this is just what I wanted. It's going to be perfect for my yellow curry.": "О, это выглядит так аппетитно! Спасибо, это как раз то, что нужно. Она идеально подойдет для моего желтого карри.",
   "Mayor's \"Shorts\"": "\"Штаны\" Мэра",
-  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые штаны \"shorts\". Он просит Вас найти и вернуть их... Незаметно.",
+  "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые \"штаны\". Он просит Вас найти и вернуть их... Незаметно.",
   "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые штаны Мэра Льюиса.",
-  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох!...Уфф...Хех.#$b#There? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
+  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох!...Эммм...Хех.#$b#Там? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
   "Pam Is Thirsty": "Жаждущая Пэм",
-  "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет бледный эль. Регулярное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
-  "Bring Pam a pale ale.": "Дать Пэм бледный эль.",
-  "Gimme that. *slurp*... Ahh, that's the stuff.#$b#It's real nice and hoppy... notes of citrus and pine, but with a robust body to keep it grounded.#$b#Thanks, kid. This means a lot to me. I knew I could count on you.$h": "Дай мне. *глаток*... Ахх, вот это вещь.#$b#It's реально хороший и хмелевой... Ноты цитруса и сосны, но он очень крепкий и заземленный.#$b#Спасибо, малыш. Это очень много значит для меня. Я знала, что могу рассчитывать на тебя.$h",
+  "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет светлое пиво. Обычное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
+  "Bring Pam a pale ale.": "Принести Пэм светлое пиво.",
+  "Gimme that. *slurp*... Ahh, that's the stuff.#$b#It's real nice and hoppy... notes of citrus and pine, but with a robust body to keep it grounded.#$b#Thanks, kid. This means a lot to me. I knew I could count on you.$h": "Дай сюда. *глоток*... Ахх, вот это вещь.#$b#Оно очень хорошее и хмельное... Ноты цитруса и сосны, но крепкая основа их отлично смягчает.#$b#Спасибо, пацан. Это очень много значит для меня. Я знала, что могу рассчитывать на тебя.$h",
   "Crop Research": "Crop Research",
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
