--- a/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
@@ -30,13 +30,13 @@
   "Looking for": "Ищу",
   "I'm in the market for": "Хочу купить",
   "I could really go for": "Я очень хочу получить ",
-  "a farm-fresh @key.": "свеже-вскопанный @key. ",
-  "a delicious @key.": "вкусный @key.",
-  "a ripe @key.": "спелый @key.",
-  "Could a local farmer deliver one to me?": "Может ли фермер принести их мне?",
-  "I'll pay you when you bring it.": "Я заплачу тебе, когда ты мне его принесешь.",
+  "farm-fresh": "свеже-вскопанный",
+  "delicious": "вкусный",
+  "ripe": "спелый",
+  "Could a local farmer deliver one to me?": "Может ли местный фермер сделать для меня доставку?",
+  "I'll pay you when you bring it.": "Я заплачу после доставки.",
   "I would be so happy if someone delivered one to me.": "Я был бы рад, если бы кто-то мне это принес.",
-  "Makes @key happy": "Сделает @keyR счастливым",
+  "Makes @key happy": "Сделает @keyR счастливее",
   "@key will be thankful": "@key обрадуется",
   "@key will be pleased": "@keyD будет приятно",
   "__comment": "Need an @key to serve at my afternoon tea party.@newline        -@key",
@@ -110,8 +110,8 @@
   "Hi! I need a @key for a new appetizer I'm thinking about. Drop one off at the saloon and I'll be very grateful.     -Gus@newline@newline- @numberg on delivery@newline- @key": "Привет! Я хочу заполучить @keyV для создания новой закуски. Закиньте 1 шт. в салун и я буду очень благодарен . -Гас@newline@newline- @за доставку@newline- @key",
   "Hi! I need an @key for a new appetizer I'm thinking about. Drop one off at the saloon and I'll be very grateful.     -Gus@newline@newline- @numberg on delivery@newline- @key": "Привет! Я хочу заполучить @keyV для создания новой закуски. Закиньте 1 шт. в салун и я буду очень благодарен . -Гас@newline@newline- @за доставку@newline- @key",
   "__comment": "I'd like to put a @key above the mantle. Please deliver it some time today.@newline     -@key",
-  "I'd like to put a @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I'd like to put an @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I'd like to put a @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите сегодня в любое время.@newline        -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I'd like to put an @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите сегодня в любое время.@newline        -@key@newline@newline- @numberg за доставку@newline- @key",
   "on my shelf": "положить себе на полку",
   "above the mantle": "прикрепить к накидке",
   "under my pillow": "положить под подушку",
@@ -150,8 +150,8 @@
   "@key would like to hire someone to fetch an @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key": "@key наймёт кого нибудь, что бы принести @key. Ваше потраченное время будет компенсировано.@newline@newline- @numberg за доставку@newline- @key",
   "Buying 1 @key at twice the market value! Please deliver directly to me     -@key@newline@newline- @numberg on delivery@newline- @key": "Куплю 1 @key по рыночной цене двух! Только  пожалуйста несите сразу ко мне -@key@newline@newline- @numberg за доставку@newline- @key",
   "Buying 1 @key at twice the market value! Please deliver directly into my hands.     -@key@newline@newline- @numberg on delivery@newline- @key": "Куплю 1 @key по рыночной цене двух! Только пожалуйста несите сразу ко мне -@key@newline@newline- @numberg за доставку@newline- @key",
-  "Bring @key a @key": "Принести @keyD @keyV",
-  "Bring @key an @key": "Принести @keyD @keyV",
+  "Bring @key a @key": "Принести @keyD @key",
+  "Bring @key an @key": "Принести @keyD @key",
   "__comment": "Oh! Is that the @key I requested? Thanks so much!$h",
   "__comment": "Hello @player! Is that the @key I requested? I really appreciate it.",
   "@key Is that the @key I requested? @key": "@key Это @key у тебя в руках?@key",
@@ -212,13 +212,14 @@
   "Bring a @key": "Принеси  @key",
   "Bring an @key": "Положи @key",
   "That's not enough... I need @number of them.": "Этого недостаточно... мне нужно @number из них.",
-  "@number Day": "@number День",
+  "@number Day": "@number Сутки",
+  "@number Days": "@number Суток",
   "__comment": "LostItemQuest.cs",
   "You found the @key. Better return it to @key.": "Вы нашли @key. Лучше вернуть их на @key.",
   "Return to @key.": "Вернитесь к @keyR.",
   "You found it! Thank you.": "Ты нашел его! Спасибо.",
   "__comment": "Quest.cs",
-  "Journal Updated": "Журнал обновлен ",
+  "Journal Updated": "Дневник обновлен ",
   "__comment": "ResourceCollectionQuest.cs",
   "Gathering": "Собрано",
   "Hello! It's Robin. Could someone bring me @number pieces of @key? They need to be fresh... that means gathered today. Thanks!": "Привет! Это Робин. Мне требуются @key в количестве @number штук. Может кто нибудь принести? Они должны быть свежими... сорванными в этот же день. Заранее спасибо!",
@@ -274,7 +275,7 @@
   "An invasive crab species is living in the local mine, threating the native wildlife! These creatures are known for disguising themselves as stones. I'll pay someone to slay @number of them.  -Demetrius": "Инвазивный вид крабов поселился в местной пещере и он угрожает естественной экосистеме! Эти создания известны своим умением маскировать себя под камни. Я заплачу за уничтожение @number членистоногих. - Деметрий",
   "Hey, I see you culled the @key population a bit. They've been multiplying quicker than normal due to human activity in the caves, so I'm hoping our efforts prevent them from threatening any other species.": "Эй, смотрю тебе удалось немного снизить численность @key. Они стали размножаться куда быстрее обычного, из за человеческой активности в шахтах, так что я надеюсь что наши действия не позволят им навредить другим видам.",
   "The local wildlife thanks you for what you did today, @player. Enjoy your reward.": "Местная природа благодарит тебя за помощь, @player. Наслаждайся наградой. ",
-  "The monsters known as @key are throwing the elemental balance into disarray. I would like an adventurer to enter the mines and slay @number of these @key.  -M. Rasmodius, Wizard": "Монстры известный как @key, наводят хаос в мире элементалей. Я бы хотел что бы какой нибудь герой спустился в шахты и убил @number этих @key. -М. Расмодей, Волшебник",
+  "The monsters known as @key are throwing the elemental balance into disarray. I would like an adventurer to enter the mines and slay @number of these @key.  -M. Rasmodius, Wizard": "Монстры, известные как @key, сеют хаос и ставят под угрозу нынешнее спокойствие. Было бы хорошо, если какой-нибудь авантюрист убил @number этих @key.  -М. Расмодей, Волшебник",
   "beasts": "тварей",
   "fiends": "извергов",
   "creatures": "существ",
