--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -141,6 +141,7 @@
   "__comment HiWords": "__comment HiWords",
   "Hi": "Привет",
   "Hello": "Здравствуй",
+  "Hello!": "Здравствуй!",
   "Good morning": "Доброе утро",
   "Good afternoon": "Добрый день",
   "Good evening": "Добрый вечер",
