--- a/MultiLanguage/languages/RU/dictionaries/_Locations.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Locations.json
@@ -19,7 +19,7 @@
   "...*snore*...": "...*храп*...",
   "...Come back when you've got something to show me, kid": "...Возвращайся, когда будет, что показать мне малыш.",
   "Use 300 pieces of wood to fix the bridge?": "Использовать 300 дерева, чтобы починить мост?",
-  "Hmmm... With 300 pieces of wood this could be fixed.": "Хм... 300 единиц дерева хватит, чтобы это починить..",
+  "Hmmm... With 300 pieces of wood this could be fixed.": "Хм... 300 единиц дерева хватит, чтобы это починить.",
   "    Gone fishing.^^   I'll be back tomorrow.": "    Отправился на рыбалку.^^   Вернусь завтра.",
   "Old Mariner: Glad the amulet worked out for ye, lad.": "Старый моряк: Я рад, что амулет сработал, парень.",
   "Old Mariner: Glad the amulet worked out for ye, miss.": "Старый моряк: Я рад, что амулет сработал, мисс.",
@@ -132,6 +132,7 @@
   "Leave the mine": "Покинуть шахту",
   "Adventurer's Guild": "Гильдия авантюристов",
   "Proven adventurers only.": "Только для авантюристов.",
+  "      * Adventurer's Guild *^^    Proven adventurers only.": "      * Гильдия авантюристов *^^    Только для проверенных авантюристов.",
   "Hello": "Привет",
   "A train is passing through Stardew Valley": "Поезд проходит через Стардью Вэлли",
   "Hey, @player": "Привет, @player",
@@ -170,7 +171,7 @@
   "But on the bright side, the worms are really loving it! They've never looked happier!": "Но с другой стороны, червячкам оно вполне по вкусу! Они никогда не выглядели счастливей!",
   "Hey, remember that @key you sold me the other day? I ended up serving it to the family for a special dinner.": "Эй, помнишь @key, что я купил у тебя пару дней назад? Оно пошло на приготовление семейного ужина. ",
   "I can't say it was a hit...": "Я не могу сказать, что это был удар...",
-  "My wife loved it! ...And Abby even started going to town on it after I smothered the thing in hoisin sauce.": "Моей жене очень понравилось!... а Эбби даже сама вышла в город, после того как я полил блюдо соусом хойсин.",
+  "My wife loved it! ...And Abby even started going to town on it after I smothered the thing in hoisin sauce.": "Моей жене очень понравилось! ...а Эбби даже сама вышла в город, после того как я полил блюдо соусом хойсин.",
   "... well,... back to business, huh?": "...ну,... вернемся к делу, да?",
   "Emily tried to serve me a @key for dinner last night... I threw it away when she wasn't looking.": "Эмили хотела подать мне @key на ужин, прошлым вечером... пока она не смотрела я выбросил это в мусорку.",
   "I don't like health food...": "Я не люблю здоровую пищу...",
