--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -9,10 +9,10 @@
   "Sell for @numberg": "Продать за @numberg",
   "Change Home Building": "Переместить дом",
   "Allow Pregnancy": "Разрешить беременность",
-  "Age: @number month": "Возраст: @number month",
-  "Age: @number months": "Возраст: @number month",
-  "Age: @number month (Baby)": "Возраст: @number month (Ребенок)",
-  "Age: @number months (Baby)": "Возраст: @number month (Ребенок)",
+  "Age: @number month": "Возраст: @number месяц",
+  "Age: @number months": "Возраст: @number месяца",
+  "Age: @number month (Baby)": "Возраст: @number месяц (Ребенок)",
+  "Age: @number months (Baby)": "Возраст: @number месяца (Ребенок)",
   "Parent: @key": "Родитель: @key",
   "Are you sure?": "Вы уверены?",
   "Please choose a @keyV for your @keyR": "Пожалуйста выберете @keyV для вашего @keyR",
@@ -20,7 +20,7 @@
   "@key's Birthday": "День рождения @keyR",
   "@key' Birthday": "День рождения @keyR",
   "Nothing is posted today.": "Сегодня нет объявлений.",
-  "Accept Quest": "Принять",
+  "Accept Quest": "   Принять  ",
   "__comment Menus/BlueprintsMenu.cs": "__comment Menus/BlueprintsMenu.cs",
   "Not Enough Resources": "Не хватает ресурсов",
   "Incorrect Building Type": "Неправильный тип здания",
@@ -103,7 +103,7 @@
   "Reward": "Награда",
   "We    the  Junimo are    happy to    aid  you.  In     return we     ask for gifts   of      the valley.    If you   are one     with    forest   magic    then you    will   see    the true    nature   of  this scroll.": "Мы, Джунимо, очень рады помочь тебе. Взамен мы просим подарки из долины. Если ты обладаешь магией леса, ты сможешь узреть настоящую природу этого свитка.",
   "Reward: @key": "Награда: @key",
-  "$ @number g enclosed": "$ приложенно @number золотых",
+  "$ @numberg enclosed": "$ @numberg приложено",
   "New @key recipe:": "Новый рецепт @keyR:",
   "'@key'": "'@key'",
   "Level @number @key": "Уровень @number @key",
@@ -335,7 +335,7 @@
   "Club Card": "Клубная карта",
   "Special Charm": "Особый шарм",
   "Skull Key": "Ключ Черепа",
-  "@number Hoe Efficiency @newline +@number Water Can Efficiency": "@number Эффективность мотыги @newline +@number Эффективность лейки",
+  "@number Hoe Efficiency@newline@number Water Can Efficiency": "@number Эффективность мотыги@newline@number Эффективность лейки",
   "@number Fishing Rod Efficiency": "@number Эффективность удочки",
   "@number Axe Efficiency": "@number Эффективность топора",
   "@number Pickaxe Efficiency": "@number Эффективность кирки",
@@ -380,7 +380,7 @@
   "(boyfriend)": "(парень)",
   "(girlfriend)": "(девушка)",
   "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры",
-  "__Exhausted": "Истощение",
+  "Exhausted": "Истощение",
   "Jukebox": "Проигрыватель",
   "- @key - @key": "- @key - @key"
 }
