--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -42,7 +42,7 @@
   "It's her favorite.": "Это её любимое.",
   "He loves it.": "Он любит это.",
   "He loves that stuff.": "Он любит такие вещи.",
-  "She loves it.": "Он любит это.",
+  "She loves it.": "Она любит это.",
   "She loves that stuff.": "Она любит такие вещи.",
   "I gave it to him one year and he wouldn't stop talking about it.": "Я в какой-то год подарил ему это и он говорил об этом не переставая.",
   "I gave it to her one year and she wouldn't stop talking about it.": "Я в какой-то год подарил ей это и она говорила об этом не переставая.",
