--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -372,14 +372,14 @@
   "Can only be placed in House": "Можно разместить только внутри Дома",
   "__comment Object/SpecialItem.cs": "__comment Object/SpecialItem.cs",
   "Under a piece of wood, you found a @key! You're not sure what it's for, but it seems important. It's been added to your wallet.": "Под куском дерева, вы нашли @keyV! Вы не уверены для чего она нужна, но кажется она важна. Она добавлена в ваш бумажник.",
-  "You've found the @key! You're not sure what it's for, but it seems important. It's been added to your wallet.": "Вы нашли @keyV! Вы не уверены для чего он, но кажется он важен. Он добавлена в ваш бумажник.",
-  "You got the @key! Your inventory space has increased to @number.": "Вы получили @keyV! Размер вашего инвентаря увеличен до @number.",
+  "You've found the @key! You're not sure what it's for, but it seems important. It's been added to your wallet.": "Вы нашли предмет @key! Вы не уверены для чего он, но кажется он важен. Он добавлен в ваш бумажник.",
+  "You got the @key! Your inventory space has increased to @number.": "Вы получили @key! Размер вашего инвентаря увеличен до @number.",
   "__comment Object/TV.cs": "__comment Object/TV.cs",
   "Weather Report": "Прогноз погоды",
   "Fortune Teller": "Гадалка",
   "Livin' Off The Land": "Фермерская жизнь",
-  "The Queen Of Sauce": "Королева Приправ",
-  "The Queen Of Sauce (Re-run)": "Королева Приправ (Повтор)",
+  "The Queen Of Sauce": "Королева приправ",
+  "The Queen Of Sauce (Re-run)": "Королева приправ (Повтор)",
   "(Leave)": "(Выключить)",
   "Select channel:": "Выбрать канал:",
   "Welcome to \"Livin' Off The Land\". We're back again with another tip for y'all. Now listen up:": "Вас приветствует \"Фермерская жизнь\". Мы снова в эфире с очередным советом фермерам. Слушайте внимательно:",
