--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -164,7 +164,7 @@
   "...Without further ado, ladies and gentleman...": "..Без лишних слов, дамы и господа...",
   "The next Stardew Hero will be...": "Новым Героем Стардью становится...",
   "...@key.": "...@key.",
-  "Well, congratulations @key... It looks like you outscored @player by @number points. ": "Что ж, поздравляем тебя @key... Ты смог|смогла обогнать @player на @number очков. ",
+  "Well, congratulations @key... It looks like you outscored @player by @number points. ": "Что ж, поздравляем тебя @key... Ты смог обогнать @player на @number очков. ^Что ж, поздравляем тебя @key... Ты смогла обогнать @player на @number очков. ",
   "Of course I did. I never considered @player a threat even for a millisecond.": "Конечно же, я сделал это. Я все время был уверен, что @player не представляет угрозы для меня.",
   "...Sorry @player. You did well, but you didn't accomplish enough to win.": "...Мне жаль, @player. Ты сделал все, что мог, но этого оказалось не достаточно для победы.^...Мне жаль, @player. Ты сделала все, что могла, но этого оказалось не достаточно для победы.",
   "__comment": "Emily says",
@@ -173,11 +173,11 @@
   "Final score: @number@newlineBetter luck next time!": "Окончательный результат: @number@newlineУдачи в следующий раз!",
   "Unfortunately, @player was so jealous of my incredible farm that he did everything possible to drag me down!": "К сожалению, @player настолько сильно завидовал, что сделал все возможное, чтобы унизить меня!",
   "...@player.": "...@player.",
-  "Congratulations, @player! You earned it with a whopping @number points!": "Поздравляем, @player! Ты заработал колоссальные @number очки!",
+  "Congratulations, @player! You earned it with a whopping @number points!": "Поздравляем, @player! Ты заработал колоссальные @number очков!",
   "Way to go, @player!": "Так держать, @player!",
   "Good job, buddy!": "Хорошая работа, приятель!",
   "__comment": "pierre says",
   "I told you my seeds would get the job done!": "Я же говорил, что мои семена сработают!",
-  "This is the stupidest town I've ever set my foot in!": "Это самый тупой город, в котором я был|была!",
-  "@key was never heard from again...": "Больше никто не слышал о @keyP..."
+  "This is the stupidest town I've ever set my foot in!": "Это самый тупой город, в котором я был!^Это самый тупой город, в котором я была!",
+  "@key was never heard from again...": "Больше никто никогда не слышал о @keyP..."
 }
