--- a/MultiLanguage/languages/RU/dictionaries/schedules.json
+++ b/MultiLanguage/languages/RU/dictionaries/schedules.json
@@ -80,7 +80,7 @@
   "Shhh... he's asleep.": "Шшш... Он спит.",
   "__comment": "Leah",
   "Hello, @player. I'm just enjoying the fresh air for a while. I was starting to get cabin fever at home.": "Привет, @player. Я просто дышу свежим воздухом. В доме у меня начинается лихорадка.",
-  "Hi. Here to see the doctor?": "Привет. Пришел на прием к доктору?",
+  "Hi. Here to see the doctor?": "Привет. Ты на прием к доктору?",
   "Do I look healthy, Doctor Harvey?": "Я выгляжу здоровой, доктор Харви?",
   "__comment": "Lewis",
   "Well, the fish certainly smells fresh this season.": "Ну, рыба конечно пахнет свежо в этом сезоне.",
