--- a/MultiLanguage/languages/RU/dictionaries/_DateStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_DateStrings.json
@@ -6,7 +6,7 @@
     "Winter": "Зима",
 
   "@key of Spring, Year @number":"@key день Весны, Год @number",
-  "@key of Summer, Year number":"@key день Лета, Год @number",
+  "@key of Summer, Year @number":"@key день Лета, Год @number",
   "@key of Fall, Year @number":"@key день Осени, Год @number",
   "@key of Winter, Year @number":"@key день Зимы, Год @number",
 
@@ -15,7 +15,7 @@
   "2nd":"2ой",
   "3rd":"3ий",
   "4th":"4ый",
-  "5st":"5ый",
+  "5th":"5ый",
   "6th":"6ой",
   "7th":"7ой",
   "8th":"8ой",
@@ -37,7 +37,7 @@
   "22nd":"22ой",
   "23rd":"23ый",
   "24th":"24ый",
-  "25st":"25ый",
+  "25th":"25ый",
   "26th":"26ой",
   "27th":"27ой",
   "28th":"28ой",
